infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
      - name: auth-mongo
        image: mongo
        ports:
          - containerPort: 27017
        resources:
          limits:
            memory: "3Gi"
            cpu: "1500m"
          requests:
            memory: "1Gi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: auth-mongo
  ports:
  - port: 27017
    targetPort: 27017
