infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: tomersf/client
        ports:
          - containerPort: 3000
        resources:
          limits:
            memory: "2Gi"
            cpu: "1500m"
          requests:
            memory: "1Gi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
