infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: tomersf/orders
        ports:
          - containerPort: 3000
        resources:
          limits:
            memory: "2Gi"
            cpu: "1500m"
          requests:
            memory: "1Gi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
  - port: 3000
    targetPort: 3000
