infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
      - name: tickets
        image: tomersf/tickets
        ports:
          - containerPort: 3000
        resources:
          limits:
            memory: "2Gi"
            cpu: "1500m"
          requests:
            memory: "1Gi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  type: ClusterIP
  selector:
    app: tickets
  ports:
  - port: 3000
    targetPort: 3000
